Refactor: Remove RabbitMQ and reorganize codebase structure
- Removed rabbitmq_worker directory and all RabbitMQ dependencies
- Reorganized code into backend/ and frontend/ directories
- Moved config.json to root level
- Updated all file paths and imports
- Simplified start.sh by removing RabbitMQ setup
- Removed unused rabbitmqQueue configuration

--- a/config.json
+++ b/config.json
@@ -3,7 +3,6 @@
   "serverPort": 8011,
   "autoKillPorts": true,
   "pythonServerFile": "/Users/yigalweinberger/Documents/Code/startups/docker_agents_server/test_server.py",
-  "endpointsOutputFile": "./config/endpoints.json",
-  "autoGenerateEndpoints": true,
-  "rabbitmqQueue": "fastapi_to_test_website_requests"
+  "endpointsOutputFile": "frontend/config/endpoints.json",
+  "autoGenerateEndpoints": true
 }
